2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Drop MAXCHAR macro and just use MAXLEN.

	* src/wordseg.cpp:
	  - Drop MAXCHAR macro def.
	  - s/MAXCHAR/MAXLEN/g.

2012-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add input conversion for FilterLatex.

	* src/Makefile.am, +src/convutil.h, +src/convutil.cpp:
	  - Add conversion utility functions resembling libc functions.
	  - Move UCopy() from src/wordseg.cpp to ConvCopy() here.
	  - Add ConvGetS() function resembling fgets().
	* src/wordseg.cpp (WordSegmentation):
	  - Replace UCopy() calls with ConvCopy().
	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Replace fgets() calls with ConvGetS().

2012-05-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Only convert output text, not the wbr string.

	Let's move the output sentence creation into WordSegmentation().
	This means Unicode moving conversion from main() (upper layer),
	and wbr insertion from AbsWordSeg::WordSeg() (lower layer).

	* src/wordseg.cpp (WordSegmentation):
	  - Add isUniOut parameter.
	  - Also add outputSz to guard against buffer overflow.
	  - Assuming AbsWordSeg::WordSeg() returns sep points array,
	    alternately do text conversion and inserting wbr at the sep points.
	* src/wordseg.cpp (UCopy):
	  - Add the utility function for copying text with conditional
	    conversion.
	* src/wordseg.cpp (main):
	  - Add "isUniOut" and "sizeof output" args to all WordSegmentation()
	    calls.
	  - Replace all UPrint() calls with plain printf(), as no more
	    conversion is needed at this layer.
	  - Adjust loop condition a little bit.
	* src/wordseg.cpp (UPrint):
	  - Drop the now-unused utility function.
	* src/abswordseg.h, src/abswordseg.cpp (WordSeg):
	  - Redefine WordSeg() method to accept outSeps[] array, with size,
	    and return the total members filled.
	* src/abswordseg.h, src/abswordseg.cpp (GetBestSen):
	  - Simply copy the SepData[bestidx] to outSeps[] array, instead of